test/Interop/Cxx/namespace/top-level-inline-namespace-lookup.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: %target-language-frontend -typecheck -verify -verify-ignore-unknown -I %t/Inputs  %t/test.code  -enable-experimental-cxx-interop

//--- Inputs/module.modulemap
module namespaces {
  header "test.h"
  requires cplusplus
}
//--- Inputs/test.h
inline namespace TopLevelInline {

struct InTopLevelInline {
};

} // namespace TopLevelInline

//--- test.code

import namespaces;

extension InTopLevelInline { // expected-error {{cannot find type 'InTopLevelInline' in scope}}
}

extension TopLevelInline.InTopLevelInline { // ok
  var string: String {
    return ""
  }
}
